--- a/BackupMySql/app.config
+++ b/BackupMySql/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.data>
     <DbProviderFactories>
@@ -12,9 +12,13 @@
   </connectionStrings>
   <appSettings>
     <add key="DestinationDirectoryMonitoreo" value="C:/baks/"/>
-	<add key="DestinationDirectoryAuditoria" value="C:/baks/"/>
-	<add key="DatabaseNameMonitoreo" value="monitoreo"/>
-	<add key="DatabaseNameAuditoria" value="auditoria_monitoreo"/>
+	  <add key="DestinationDirectoryAuditoria" value="C:/baks/"/>
+	  <add key="DatabaseNameMonitoreo" value="monitoreo"/>
+	  <add key="DatabaseNameAuditoria" value="auditoria_monitoreo"/>
+    <add key="Servidor" value=""/>
+    <add key="RutaEnElServidor" value=""/>
+    <add key="Username" value=""/>
+    <add key="Password" value=""/>
   </appSettings>
 
 </configuration>
