Agregar Copia Adicional para crashplan

--- a/BackupMySql/app.config
+++ b/BackupMySql/app.config
@@ -13,6 +13,9 @@
   <appSettings>
     <add key="DestinationDirectoryMonitoreo" value="C:/baks/"/>
 	  <add key="DestinationDirectoryAuditoria" value="C:/baks/"/>
+    <add key="CrashPlanFolder" value="C:/c/test-cp/"/>
+    <add key="CrashPlanFileNameMonitoreo" value="MONITOREO-PRMIX"/>
+    <add key="CrashPlanFileNameAuditoria" value="AUDITORIA-PRMIX"/>
 	  <add key="DatabaseNameMonitoreo" value="monitoreo"/>
 	  <add key="DatabaseNameAuditoria" value="auditoria_monitoreo"/>
     <add key="Servidor" value=""/>
